--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: aurinapi
 Title: A Package for Downloading AURIN Datasets Through their API.
 Version: 0.1.0
-Author: Amarin Siripanich
+Authors@R: person('Amarin', 'Siripanich', email = 'amarin.siri@gmail.com', role = c('cre', 'aut'))
 Description: A Package for Downloading AURIN Datasets Through their API.
 License: MIT + file LICENSE
 Encoding: UTF-8
