--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,11 +12,11 @@ Suggests:
     testthat,
     covr
 Imports: 
-    sf,
-    gdalUtils,
-    checkmate,
-    cli,
-    stringr,
-    glue
+    sf (>= 0.9.0),
+    checkmate (>= 2.0.0),
+    cli (>= 2.1.0),
+    stringr (>= 1.4.0),
+    glue (>= 1.4.0),
+    httr (>= 1.4.0)
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
