--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: aurinapi
-Title: A Package for Downloading AURIN Datasets Through their API.
+Title: Access AURIN datasets from R
 Version: 0.2.0
 Authors@R: person('Amarin', 'Siripanich', email = 'amarin.siri@gmail.com', role = c('cre', 'aut'))
-Description: A Package for Downloading AURIN Datasets Through their API.
+Description: Access AURIN datasets from R.
 License: MIT + file LICENSE
 Encoding: UTF-8
 URL: https://github.com/asiripanich/aurinapi
