--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: aurinapi
 Title: Access AURIN datasets from R
-Version: 0.2.0
+Version: 0.3.0
 Authors@R: person('Amarin', 'Siripanich', email = 'amarin.siri@gmail.com', role = c('cre', 'aut'))
 Description: Access AURIN datasets from R.
 License: MIT + file LICENSE
@@ -10,7 +10,9 @@ BugReports: https://github.com/asiripanich/aurinapi/issues
 LazyData: true
 Suggests: 
     testthat,
-    covr
+    covr,
+    ows4R (>= 0.1.0),
+    R6 (>= 2.5.0)
 Imports: 
     sf (>= 0.9.0),
     checkmate (>= 2.0.0),
