export aurin_wfs_client_wrapper

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(aurinapi_build_get_feature_request)
 export(aurinapi_get)
 export(aurinapi_meta)
 export(aurinapi_register)
+export(aurinapi_wfs_client_wrapper)
 export(create_aurinapi_wfs_client)
 export(get_aurinapi_wfs_client)
 export(get_aurinapi_wfs_client_wrapper)
