--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,4 @@ export(aurinapi_wfs_client_wrapper)
 export(create_aurinapi_wfs_client)
 export(get_aurinapi_wfs_client)
 export(get_aurinapi_wfs_client_wrapper)
+importFrom(jsonlite,read_json)
