Add a secret 🤫to GHA

--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -11,6 +11,7 @@ jobs:
     runs-on: macOS-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      AURIN_API_USERPWD: ${{ secrets.AURIN_API_USERPWD }}
     steps:
       - uses: actions/checkout@v2
 
