--- a/.github/workflows/render-rmarkdown.yaml
+++ b/.github/workflows/render-rmarkdown.yaml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      AURIN_API_USERPWD: ${{ secrets.AURIN_API_USERPWD }}
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
