--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,8 +23,7 @@ Imports:
     magrittr
 Suggests: 
     testthat,
-    covr,
-    rmarkdown
+    covr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Config/testthat/edition: 3
