--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
-Package: aurinapi
+Package: aurin
 Title: Access AURIN Datasets from R
-Version: 0.4.1.9000
+Version: 0.5.0
 Authors@R: person('Amarin', 'Siripanich', email = 'amarin.siri@gmail.com', role = c('cre', 'aut'))
-Description: Access AURIN datasets from R.
+Description: Access AURIN datasets from R. To use this package you will need to request for an API key 
+    from AURIN (it's free!).
 License: MIT + file LICENSE
 Encoding: UTF-8
-URL: https://github.com/asiripanich/aurinapi
-BugReports: https://github.com/asiripanich/aurinapi/issues
+URL: https://github.com/asiripanich/aurin
+BugReports: https://github.com/asiripanich/aurin/issues
 LazyData: true
 Depends:
     R (>= 3.5.0)
