--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: aurin
-Title: Access AURIN Datasets from R
-Version: 0.5.0.9000
+Title: Access Datasets from the 'AURIN' API
+Version: 0.5.1
 Authors@R: person('Amarin', 'Siripanich', email = 'amarin.siri@gmail.com', role = c('cre', 'aut'))
-Description: This package allows you to access AURIN Datasets using an AURIN API key 
-    that can be requested from AURIN (it's free!). AURIN is “Australia’s 🦘 single largest 
-    resource for accessing clean, integrated, spatially enabled and research-ready data on 
-    issues surrounding health and wellbeing, socio-economic metrics, transportation, and land-use.”.
+Description: 'AURIN' <https://aurin.org.au/resources/aurin-apis/> is "Australia's single
+    largest resource for accessing clean, integrated, spatially enabled and research-ready
+    data on issues surrounding health and wellbeing, socio-economic metrics, transportation,
+    and land-use.". This package provides functions to download and search datasets from
+    the AURIN API (it's free to use!).
 License: MIT + file LICENSE
 Encoding: UTF-8
 URL: https://github.com/asiripanich/aurin
