--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,14 +15,14 @@ LazyData: true
 Depends:
     R (>= 3.5.0)
 Imports: 
-    sf (>= 0.9.0),
-    checkmate (>= 2.0.0),
-    cli (>= 2.1.0),
-    stringr (>= 1.4.0),
-    glue (>= 1.4.0),
-    httr (>= 1.4.0),
-    R6 (>= 2.5.0),
-    ows4R (>= 0.1.0),
+    sf,
+    checkmate,
+    cli,
+    stringr,
+    glue,
+    httr,
+    R6,
+    ows4R,
     jsonlite,
     magrittr
 Suggests: 
