ci: run github actions once every week.

--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -5,7 +5,9 @@ on:
     branches: [main, master]
   pull_request:
     branches: [main, master]
-
+  schedule:
+    - cron: '0 0 * * 0'
+    
 name: test-coverage
 
 jobs:
